# rust-xdr

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/service_example/: example_prot.v  main.rs  service.rs
examples/service_example/xdrgen/: codec.rs  mod.rs  prot.rs  service.rs  xdr_codec.rs  xdr_rpc.rs
examples/xdr_protocol_example/: rpc.x
src/: code_writer.rs  codegen.rs  function_writer.rs  main.rs  parser.rs  test.rs  xdrgen.rs
src/serde_xdr/: Cargo.toml  deserializer.rs  error.rs  lib.rs  ser.rs  serializer.rs  xdr_codec.rs  xdr_rpc.rs
src/test/: gen_test.rs  rpc.rs  rpc.x  test.rs
src/xdr_rpc/: Cargo.toml
