[package]
name = "xdrproto"
version = "0.1.0"
authors = ["Ben Brittain <ben@brittain.org>"]

[lib]
name = "serde_xdr"
path = "src/serde_xdr/lib.rs"

[[bin]]
name = "xdrust"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test/test.rs"

[features]
nightly = []

[dependencies]
nom = "^2.0"
docopt = "0.7"
rustc-serialize = "0.3"
serde = "*"
byteorder = "*"
