[package]
name = "xdrproto"
version = "0.1.0"
authors = ["Ben Brittain <ben@brittain.org>"]

[lib]
name = "serde_xdr"
path = "src/serde_xdr/lib.rs"

[[bin]]
name = "xdrust"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test/test.rs"

[dependencies]
nom = "^2.0"
docopt = "0.7"
rustc-serialize = "0.3"
serde = "*"
serde_derive = "0.8"
byteorder = "*"
